<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.Login">

    <TextView
        android:layout_width = "wrap_content"
        android:text ="Name"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width = "wrap_content"
        android:text ="Email"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textAutoCorrect|textEmailAddress" />

    <TextView
        android:layout_width = "wrap_content"
        android:text ="Password"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Role" />

    <Spinner
        android:id="@+id/role"
        android:layout_width="match_parent"
        android:layout_height="43dp" />

    <Button
        android:id="@+id/bRegister"
        android:layout_width="match_parent"
        android:text="Register"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/bhaveAcount"
        android:layout_width = "wrap_content"
        android:text ="Already have an acoount?click here"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />

</LinearLayout>